# sdl3_doom

./: CMakeLists.txt  build-copy.sh
app_built/: .gitignore  build-copy.sh
app_built/doom1/: start.cmd
app_built/doom1/.savegame/: doomsav0.dsg  doomsav1.dsg
src/: i_sdlsound.c  st_lib.c
